feat: Implementar novo método de salvar arquivos e refatorar serviços
Este commit introduz um novo método para salvar arquivos, refatora os serviços existentes e adiciona funcionalidades para o correto funcionamento do salvamento de arquivos e integração com o frontend.

As seguintes mudanças foram implementadas:
No Back-End:
-   Implementar um novo método de salvamento de arquivos no `ArquivoService`.
    -   Os arquivos são salvos na pasta `uploads` com o nome do usuário relacionado e o tipo de arquivo.
    -   Criada a classe `ArquivoException` para tratamento de erros relacionados a arquivos.
    -   Criado o enum `TipoArquivo` para definir os tipos de arquivos suportados.
-   Refatorar os serviços de usuários e posts.
    -   O serviço de usuário agora cria o usuário com a foto de perfil corretamente.
    -   O serviço de posts agora cria os posts com as fotos.
-   Adicionar endpoints para salvar arquivos nos resources de usuários e posts.
-   Refatorar o `GlobalExceptionHandler` para tratar as novas exceções.
-   Criar o `UsuarioComumDTO` para retornar usuários com amigos em comum no backend.
-   Refatorar os scripts SQL de migration para adicionar as colunas `fotoperfilurl` e `imagemurl` nas tabelas de usuários e posts.
No Front-End:
-   Criar os serviços correspondentes para salvar arquivos.
-   Ajustar o componente de registro para:
    -   Adicionar validação de senha e confirmação de senha.
    -   Configurar a força da senha para indicar se a senha é forte e cumpre os requisitos.
-   Vincular com o backend para salvar o usuário junto com a foto de perfil.
-   Vincular os componentes `search profile`, `home`, `favorites` e `explore` para buscar as informações do backend.